Version 1.1.0-CVS (?? ??? 2005)
 - Applied PATCH 1297654: eliminate deprecated tags, excluding <b></b>
 - Applied PATCH 1349875: Fix for WebCalendar.class
 - Fixed bug 1277803: new untimed events - aren't
 - Fixed bug 1346660: new entry: time check not informed correctly ->misspelling
 - Fixed bug 1352513: Repeating Events interface is broken in Safari
 - Fixed bug 1352504: fix for one type of Lost Connection to MySQL server error
 - Fixed bug 1351971: "Delete"-Button won't work properly for reports
 - Fixed bug 1282382: Del from NUC or Pub Acc deletes from all
 - Fixed bug 1220225: 'layered events' cannot be shown by the public
 - Fixed bug 1350151: New Entry: entered time check is buggy
 - Fixed bug 1350764: RSS feed showing double entries
 - Adding logic to consume TZID settings in ics files. If the TZID used the Olson 
   timezone database naming conventions, we will apply that TIMEZONE to that event
 - Fixed bug 1349082: Week numbers wrong if Week Starts on Sun
 - Numerous tweaks to RRULE parsing for display of repeating events
 - Added new Repeat type 'Manual' that allows adding Inclusions/Exclusions 
   without other repeat attributes.
 - Fixed bug 1348068: "Check for event conflicts" not working for latest CVS
 - Fixed bug 1346010: CVS version: Not possible to add/edit events
 - Fixed bug 1120897: Conflict with exceptions
 - Fixed bug 1347097: Latest CVS install wizard recreates default admin
 - Fixed bug 1347166: javascript errors in 'Add Task'
 - Implemented PATCH 1345138: Several bug fixes
 - Implemented PATCH 1344304: Use default tzone in send_reminders for users w/out pref
 - Fixed bug 1345106: Error in send_reminders.php
 - Implemented RFE 1337513: Add disable option to Location in 'edit_entry.php'
 - Implemented RFE 802644: Allow to add a comment for reject/accept event
 - Implemented RFE 1082995: Reject Event Email Message
 - Implemented RFE 1030872: Notifications reflect user's setting for 12/24-hour time
 - Implemented RFE 1170434: Disable popups