@@ -1087,7 +1087,7 @@ if ( $single_user == "N" && $show_participants ) {
 </form>
 
 <?php if ( $id > 0 && ( $login == $create_by || $single_user == "Y" || $is_admin ) ) { ?>
- <a href="del_entry.php?id=<?php echo $id;?>" onclick="return confirm('<?php etranslate("Are you sure you want to delete this entry?")?>');"><?php etranslate("Delete entry")?></a><br />
+ <a href="del_entry.php?id=<?php echo $id;?>" onclick="return confirm('<?php etranslate("Are you sure you want to delete this entry?", true)?>');"><?php etranslate("Delete entry")?></a><br />
 <?php 
  } //end if clause for delete link
 } else { 
