@@ -92,7 +92,7 @@ if ( $single_user == "N" ) {
 // If a layer already exists put a 'Delete Layer' link
 if ( ! empty ( $layers[$id]['cal_layeruser'] ) ) { ?>
 <tr><td>
- <br /><a title="<?php etranslate("Delete layer")?>" href="del_layer.php?id=<?php echo $id; if ( $updating_public ) echo "&amp;public=1"; ?>" onclick="return confirm('<?php etranslate("Are you sure you want to delete this layer?")?>');"><?php etranslate("Delete layer")?></a><br />
+ <br /><a title="<?php etranslate("Delete layer")?>" href="del_layer.php?id=<?php echo $id; if ( $updating_public ) echo "&amp;public=1"; ?>" onclick="return confirm('<?php etranslate("Are you sure you want to delete this layer?", true)?>');"><?php etranslate("Delete layer")?></a><br />
 </td></tr>
 <?php }  // end 'Delete Layer' link ?>
 </table>
