@@ -173,7 +173,7 @@ if ( $newview ) {
 <br />
 <input type="submit" name="action" value="<?php if ( $newview ) etranslate("Add"); else etranslate("Save"); ?>" />
 <?php if ( ! $newview ) { ?>
- <input type="submit" name="action" value="<?php etranslate("Delete")?>" onclick="return confirm('<?php etranslate("Are you sure you want to delete this entry?"); ?>')" />
+ <input type="submit" name="delete" value="<?php etranslate("Delete")?>" onclick="return confirm('<?php etranslate("Are you sure you want to delete this entry?", true); ?>')" />
 <?php } ?>
 </td></tr>
 </table>
