@@ -1,4 +1,5 @@
 Version 1.1.0-CVS (?? ??? 2005)
+ - Fixed bug 1351971: "Delete"-Button won't work properly for reports
  - Applied PATCH 1297654: eliminate deprecated tags, excluding <b></b>
  - Applied PATCH 1349875: Fix for WebCalendar.class
  - Fixed bug 1277803: new untimed events - aren't
